--- a/HakiRecordApp/templates/index.html
+++ b/HakiRecordApp/templates/index.html
@@ -182,11 +182,10 @@
                 </svg>
                 <i class="bi bi-bounding-box-circles"></i>
               </div>
-              <a href="service-details.html" class="stretched-link">
+              <a href="{% url 'recent_actions' %}" class="stretched-link">
                 <h3>Audit Trail</h3>
               </a>
               <p>Track every action taken on a case for full accountability and transparency.</p>
-              <a href="{% url 'recent_actions' %}" class="stretched-link">View Logs</a>
             </div>
           </div><!-- End Service Item -->
 
@@ -198,11 +197,11 @@
                 </svg>
                 <i class="bi bi-calendar4-week icon"></i>
               </div>
-              <a href="service-details.html" class="stretched-link">
+              <a href={% url 'crime_analysis' %}" class="stretched-link">
                 <h3>Crime Analysis</h3>
               </a>
               <p>Visualize crime patterns to support proactive policing and resource planning.</p>
-              <a href="service-details.html" class="stretched-link"></a>
+              <a href="{% url 'crime_analysis' %}" class="stretched-link"></a>
             </div>
           </div><!-- End Service Item -->
 
@@ -214,11 +213,11 @@
                 </svg>
                 <i class="bi bi-chat-square-text"></i>
               </div>
-              <a href="service-details.html" class="stretched-link">
+              <a href="{% url 'shift' %}" class="stretched-link">
                 <h3>Shift Allocation:</h3>
               </a>
               <p>Assign and manage officer shifts with clear rosters and handover logs.</p>
-              <a href="service-details.html" class="stretched-link"></a>
+
             </div>
           </div><!-- End Service Item -->
 
