--- a/HakiRecordApp/templates/statement.html
+++ b/HakiRecordApp/templates/statement.html
@@ -31,6 +31,7 @@
 
 </head>
 <body>
+
 <header id="header" class="header d-flex align-items-center sticky-top">
     <div class="container position-relative d-flex align-items-center">
 
@@ -43,7 +44,17 @@
       <nav id="navmenu" class="navmenu">
         <ul>
           <li><a href="{% url 'homepage' %}" class="active">Home</a></li>
-          <li><a href="{% url 'homepage' %}#services">Features</a></li>
+          <li class="dropdown"><a href="#"><span >Features</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
+                <ul>
+                  <li><a href="{% url 'statement' %}">Record Statement</a></li>
+                  <li><a href="{% url 'cases' %}">View Cases</a></li>
+                  <li><a href="{% url 'evidence' %}">Evidence Vault</a></li>
+                  <li><a href="{% url 'recent_actions' %}">Audit Trail</a></li>
+                  <li><a href="#">Crime Analysis</a></li>
+                  <li><a href="{% url 'shift' %}">Shift Allocation</a></li>
+
+                </ul>
+              </li>
           <li><a href="{% url 'contact' %}">Contact</a></li>
         </ul>
         <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
@@ -52,14 +63,20 @@
 
     </div>
   </header>
-
-
-<h2>Record Statement</h2>
+<div class="container">
 
  <section id="services" class="services section light-background">
 
-      <div class="container">
-
+     <div class="success_message">
+   {% if messages %}
+  {% for message in messages %}
+    <div class="alert alert-success">
+      <p style="text-align: center">{{ message }}</p>
+      </div>
+  {% endfor %}
+{% endif %}
+</div>
+        <h2>Record Statement</h2>
         <div class="row gy-4">
 
           <div class="col-12 " data-aos="fade-up" data-aos-delay="100">
@@ -177,6 +194,7 @@ ly access case files, track progress, and monitor assigned officers.</p>#}
       </div>
 
     </section><!-- /Services Section -->
+</div>
 
 <footer id="footer" class="footer dark-background">
 
